# H-ESE-bathroomfan-pimvandermeer-655431

./: .gitignore  CMakeLists.txt  Makefile  README.md
bathroomfan/: Makefile  bathroomfan  bathroomfan.pro  calcbehaviour.cpp  calcbehaviour.h  errorfanstate.cpp  errorfanstate.h  fancontext.cpp  fancontext.h  fanstate.cpp  fanstate.h  idlefanstate.cpp  idlefanstate.h  idlefanstate.h.autosave  initfanstate.cpp  initfanstate.h  log.h  logger.h  logmanager.cpp  logmanager.h  main.cpp  maketest  relay.cpp  relay.h  runfanstate.cpp  runfanstate.h  runfanstate.h.autosave  sensebehaviour.cpp  sensebehaviour.h  sensor.cpp  sensor.h  timer.cpp  timer.h
bathroomfancmake/: CMakeLists.txt  calcbehaviour.h  fancontext.cpp  fancontext.h  fanstate.cpp  log.h  main.cpp  relay.cpp  relay.h  runfanstate.h
build-bathroomfan-Desktop_Qt_5_15_0_clang_64bit-Debug/: Makefile  bathroomfan
display/: appinfo.h  devconsole.cpp  devconsole.h  display.cpp  display.h  keyboard.cpp  keyboard.h
initfile/: init.ini
logs/: log.txt
main/: main.pro
test/: Makefile  context_test.cpp  log_test.cpp  main.cpp  relay_test.cpp  sensor_test.cpp  state_test.cpp  test.pro  timer_test.cpp  unittest.cpp
